...
  final bool expanded;
  @override
  Widget build(BuildContext context) {
    return Stack(
      children: [
        CustomScrollView(
          key: const ValueKey<String>('main-scroll'),
          controller: controller,
          slivers: [
            MainScreenAppbarWidget(
              expanded: expanded,
            ),
            const SliverPadding(
...
