...
                    ),
                  ),
                ],
              ),
              const Spacer(),
              FilterButton(
                key: const ValueKey<String>('filter-buton'),
                filter: ref.watch(filterProvider),
                onPressed: () {
                  ref.read(filterProvider.notifier).change();
                },
              ),
            ],
...
